@@ -11,6 +11,7 @@
 load.settings.from   = "peak.config.ini_files.do_include"
 import.on.demand     = "peak.config.ini_files.import_on_demand"
 component.factories  = "peak.config.ini_files.register_factory"
+named.services       = "peak.config.ini_files.add_services"
 load.on.demand       = "peak.config.ini_files.load_on_demand"
 
 # "Provide Utilities" is DEPRECATED
@@ -27,7 +28,6 @@ provide.utilities    = "peak.config.ini_files.provide_utility"
 file    = "peak.config.ini_files:loadConfigFile"
 files   = "peak.config.ini_files:loadConfigFiles"
 mapping = "peak.config.ini_files:loadMapping"
-
 
 
 
@@ -517,17 +517,17 @@ peak.ddt.interfaces.IDocumentProcessor =
     importString('peak.ddt.processors:DocumentProcessor')
 
 
+[Named Services]
+# Named services are almost identical to component factories, except that the
+# name to the left of the '=' sign is treated as a property name, rather than
+# an import specification, and registration happens immediately.  Named
+# services should be used whenever you want a property to have one and only
+# one instance per service area, or when there are multiple services that
+# implement the same interface, and therefore must be "asked for by name".
 
-
-
-
-
-
-
-
-
-
-
+# Currently, PEAK does not supply any named services itself, although the
+# 'ddt.SQLChecker()' component expects to find and use a named service called
+# 'peak.ddt.testDB' by default.
 
 
 
@@ -580,6 +580,8 @@ peak.running.logs.ILoggingService   = logs.DefaultLoggingService
 
 Actions = ddt.ActionChecker()   # 'Actions' creates an ActionChecker
 Summary = ddt.Summary()         # 'Summary' creates a summary
+
+Contents.of.Table.* = ddt.SQLChecker(tableName = ruleSuffix)
 
 ArithmeticFixture = ddt_demos.ArithmeticDemo()
 
